src/objects/CMD_Approval_Data__c.object
<CustomObject>
    <description>Store CMD data in custom objects and/or custom settings.Requirement#511</description>
    <fields>
        <fullName>CRMBPID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRMBPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hierarchy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Shortdescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hierarchy Shortdescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_DEFAULT_USERNAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Default Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_DIVISION_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_EMAIL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_END_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_FIRST_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_NSN_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ROLE OWNER NSN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_ROLEDESCRIPTION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Roledescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_START_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_STATUS__c</fullName>
        <label>Role Owner Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROLE_OWNER_TEAM_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Owner_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Owner_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Owner Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CMD Approval Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CMD Approval Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMD Approval Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>